--- a/WebContent/board.css
+++ b/WebContent/board.css
@@ -7,20 +7,10 @@ body {
 	min-width:800px;
 }
 
-form > label {
-	width: 200px;
-	display: inline-block;
-	float: left;
-	
-}
-
-html > body {
-	text-align: center;
-}
-
-.table-box-type-1 > table {
-	width: 100%;
-}
+table {
+    width: 100%;
+    height: 200px;
+  }
 
 #button {
 	text-align: center;
